Remove Elfsight (already have widget), fix market size to $1.5B

--- a/index.html
+++ b/index.html
@@ -572,15 +572,15 @@
         <!-- Bottom Row: Tools + Quick Wins + Competitor -->
         <div class="three-col">
             <div class="card">
-                <div class="card-header">Recommended Tools</div>
+                <div class="card-header">Tools for Scaling (500+ contacts)</div>
                 <div class="card-body">
                     <table>
-                        <tr><td><strong>WATI</strong></td><td>$49/mo</td></tr>
                         <tr><td><strong>Interakt</strong></td><td>$15/mo</td></tr>
+                        <tr><td><strong>WATI</strong></td><td>$49/mo</td></tr>
                         <tr><td><strong>Claude API</strong></td><td>~$100/mo</td></tr>
-                        <tr><td><strong>Elfsight</strong></td><td>Free</td></tr>
                     </table>
-                    <p style="margin-top: 0.75rem;"><strong>Total: $150-300/mo</strong> for full automation</p>
+                    <p style="margin-top: 0.75rem;">✅ Already have: WhatsApp widget, WhatsApp Business</p>
+                    <p>Add API tools when ready for broadcasts & chatbots</p>
                 </div>
             </div>
 
@@ -607,7 +607,7 @@
                         <li>Operates in 85 countries</li>
                         <li>Authentication = trust</li>
                     </ul>
-                    <p style="margin-top: 0.75rem;"><strong>UAE luxury kidswear:</strong> $1.2B market</p>
+                    <p style="margin-top: 0.75rem;"><strong>UAE children's apparel:</strong> $1.5B market (Statista)</p>
                 </div>
             </div>
         </div>
